deploy/api-welcome-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-welcome-msg
  namespace: default
  annotations:
    konghq.com/plugins: welcome-message
spec:
  ingressClassName: kong
  rules:
  - host: api.agentic-m.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rag-chatbot-infra
            port:
              number: 5001
